# aw139-diagnostics-platform

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  RAG_PIPELINE_SETUP.md  README.md  UPLOAD_INSTRUCTIONS.md  crew_server.py  design_guidelines.md  docker-compose.yml  dropbox_sync.py  ecosystem.config.cjs  frontend_rag_selftest.py  ingest_data.py  ingest_pdf_only.py  main.py  maintenance_crew.py  package-lock.json  package.json  pyproject.toml  rag_api.py  rag_smoke_test.py  replit.md  restart.sh  run_all_tests.py  run_full_selftest.py  run_selftest_with_servers.py  start_servers.sh
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AffectedPartsList.tsx  AircraftInfoBanner.tsx  AppSidebar.tsx  CertaintyScoreDisplay.tsx  DMCToolSelector.tsx  DiagnosisResultCard.tsx  DiagnosticForm.tsx  DisclaimerModal.tsx  ExpertBookingCard.tsx  HistoricalMatchesAlert.tsx  HistoricalMatchesTable.tsx  LikelyCausesList.tsx  MaintenanceAlert.tsx  MechanicLogCard.tsx  QuotaIndicator.tsx  RecommendedTestsList.tsx  ResolutionForm.tsx  ThemeToggle.tsx
client/src/data/: ata-codes.ts
client/src/pages/: AdminExperts.tsx  AdminUsers.tsx  Dashboard.tsx  FleetUnavailability.tsx  (+7 more)
db/: index.ts
local_connector/: .env.example  RAG_BACKEND.md  README.md  app.py  connector_service.py  ietp_connector_client.py
server/: app.ts  ata-analytics.ts  configuration-resolver.ts  db.ts  diagnostic-engine.ts  ietp-connector.ts  index-dev.ts  index-prod.ts  parse-ipd-effectivity.ts  replitAuth.ts  routes.ts  seed-ipd-effectivity.ts  seed.ts  smart-stock.ts
shared/: schema.ts
(+12 files in other folders)
