[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.6.1",
    "dropbox>=12.0.2",
    "fastapi>=0.124.0",
    "fitz>=0.0.1.dev2",
    "pydantic>=2.12.5",
    "pymupdf>=1.26.6",
    "requests>=2.32.5",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
]
